swag update
